# rubykaigi-net

./: .gitattributes  .gitignore  .gitmodules  .mairu.json  LICENSE  README.md  Rakefile  gen-cloudprober.rb  gen-hosts-tf.rb  gen-hosts.rb  gen-k8s.rb  gen-workflows.rb  hosts.txt  hosts_to_tf.rb  jsonnetfile.lock.json
.github/workflows/: docker-build-simple.libsonnet  docker-fluentd.jsonnet  docker-fluentd.yml  docker-freeradius-exporter.jsonnet  docker-freeradius-exporter.yml  docker-kea.jsonnet  docker-kea.yml  docker-radiusd.jsonnet  docker-radiusd.yml  docker-s3tftpd-healthz.jsonnet  docker-s3tftpd-healthz.yml  docker-unbound.jsonnet  docker-unbound.yml
data/: ssh_import_ids.json
docker/fluentd/: Dockerfile
docker/freeradius-exporter/: Dockerfile
docker/kea/: Dockerfile  choose_dhcp_server_id.rb  kea-ctrl-agent.jsonnet  run.sh
docker/kea/healthz/: Cargo.toml
docker/kea/healthz/src/: main.rs
docker/radiusd/: Dockerfile  README.md  eapol_cert.conf  eapol_fail.conf  run.sh  (+1 more)
itamae/: .gitignore  .itamae-secrets.yml  Gemfile  cnw  helpers.rb  hocho.yml  hosts.txt  hosts.yml  site  site.rb  vars.rb
k8s/: kp.libsonnet
misc/: ap_group_name_y.rb  ix_aws_vpn.rb  ix_tun.rb  junos_keys.rb  kea_mysql.rb  roll_apps.rb  roll_xlat.rb  update_kubeconfig.rb
route53/: Gemfile  Routefile  hosts.json  hosts.route  hosts.txt  nw.rubykaigi.org.route  ptr.route  rubykaigi.net.route  vpc.route
terraform/: aws.tf  bastion.tf  iam_ec2_prometheus.tf  route53.tf  rproxy.tf  sg.tf  vpc.tf
tf/: cloudconfig.base.libsonnet  cloudconfig.mirror.libsonnet  jsonnet.rb  sha384.rb
(+697 files in other folders)
